# AML-Hybrid-Graph-RAG

./: .env.example  .gitignore  01_corpus_and_retrievers.ipynb  02_generation_pipeline.ipynb  03_evaluation_baseline.ipynb  04_knowledge_graph.ipynb  05_hybrid_retrieval.ipynb  06_evaluation_hybrid.ipynb  07_ragas_evaluation.ipynb  README.md  hf.py  info.md  pyproject.toml  start_jupyter.py  verify_env.py
cluster/: .env.example  README.md  generate_references.py  pyproject.toml
cluster/results/results_14b/: reference_drafts.jsonl
cluster/results/results_72b/: reference_drafts.jsonl
data/: test_set.jsonl
experiment/: README.md  correctness_reasoning_diagnostic.py  p1_failure_analysis.ipynb  p1_failure_analysis.py  p2_structured_prompting.ipynb  p2_structured_prompting.py  p2_two_step_extraction.ipynb  p2_two_step_extraction.py
generation_cluster/: .gitignore  README.md  generate_answers.py  pyproject.toml
gptTest/: gpt5_generation_test.ipynb  plan.md
gptTest/results/: answers_nonthinking.jsonl  answers_nonthinking_dense_only.jsonl  answers_nonthinking_dense_sparse.jsonl  answers_nonthinking_sparse_only.jsonl  answers_thinking.jsonl  answers_thinking_dense_only.jsonl  answers_thinking_dense_sparse.jsonl  answers_thinking_sparse_only.jsonl  comparison.csv  comparison_all_configs.csv  scores.jsonl  scores_extra_configs.jsonl
results/: answers_70b.jsonl  answers_70b_recovered.jsonl  answers_recovered.jsonl  baseline_ablation.csv  correctness_scores.jsonl  full_comparison.csv  hybrid_ablation.csv  p1_universal_failures.jsonl  p2_structured_prompting_answers.jsonl  p2_structured_prompting_scores.jsonl  p2v2_extractions.jsonl  p2v2_two_step_answers.jsonl  p2v2_two_step_scores.jsonl  ragas_answer_scores.jsonl  ragas_answer_scores_70b.jsonl  ragas_correctness_scores_70b.jsonl  ragas_retrieval_scores.jsonl  ragas_summary_70b.csv
scripts/: check_api_limits.py  corpus.py  cross_refs.py  extract_pdfs.py  guardrails.py  log_setup.py  recover_answers.py
