[project]
name = "aml-reference-drafting"
version = "0.1.0"
description = "Standalone reference-answer drafting for the AML RAG dissertation - run on the cluster"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.46.0",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.46.1",
    "python-dotenv>=1.0.0",
]
